# backend/main.go
@@ -4,6 +4,8 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/slickip/Stress-management-app/backend/WebSocket"
 	"github.com/slickip/Stress-management-app/backend/config"
+	_ "github.com/slickip/Stress-management-app/backend/docs"
+	"github.com/slickip/Stress-management-app/backend/internal/ai"
 	"github.com/slickip/Stress-management-app/backend/internal/handlers"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -12,6 +14,7 @@ import (
 func main() {
 
 	config.ConnectDatabase()
+	ai.SetupAI()
 
 	r := gin.Default()
 
@@ -21,6 +24,7 @@ func main() {
 	r.GET("/ws", WebSocket.HandleWS(hub))
 	r.POST("/register", handlers.Register)
 	r.POST("/login", handlers.Login)
+	r.POST("/ai/advice", ai.GetAdvice)
 
 	protected := r.Group("/", handlers.AuthMiddleware())
 	{
